Fix header items overflow

--- a/less/_base.less
+++ b/less/_base.less
@@ -287,6 +287,9 @@ html, body {
   color: @headeritem;
   text-decoration: none;
   outline: none;
+}
+
+.header-board {
   overflow: hidden;
   text-overflow: ellipsis;
 }
