--- a/less/_responsive.less
+++ b/less/_responsive.less
@@ -21,6 +21,9 @@
 
 // Small mobile
 @media (max-width: 360px) {
+  .header-board {
+    text-overflow: clip;
+  }
   .post-file-link {
     float: none;
   }
